--- a/templates/header.html
+++ b/templates/header.html
@@ -10,11 +10,29 @@
     <meta charset="UTF-8">
 
     <!--Use bootstrap to make the application look decent-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-    <script src='/js/controller.js'></script>
 
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-animate.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+
+    <script src="/static/js/angular-bootstrap-toggle.min.js"></script>
+    <script src="/static/js/ui-bootstrap-tpls-2.5.0.min.js"></script>
+    <script src='/static/js/controller.js'></script>
+    <script src="/static/js/inline-edit.js"></script>
+    <script src="/static/js/inline-typehead.js"></script>
+    <script src="/static/js/inline-comment.js"></script>
+    <script src="/static/js/inline-date.js"></script>
+    <script src="/static/js/on-enter.js"></script>
+    <script src="/static/js/on-esc.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href='/static/css/style.css'>
+    <link rel="stylesheet" href='/static/css/angular-bootstrap-toggle.min.css'>
+
+
+    <base href="/">
 </head>
 
 <body class="container" ng-app="viewDB" ng-controller="viewDBCtrl">
