--- a/templates/menu.html
+++ b/templates/menu.html
@@ -2,27 +2,28 @@
 
 <nav class="navbar navbar-default">
     <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">
-                Home
-            </a>
-        </div>
         <ul class="nav navbar-nav">
-            {{ if .is_logged_in }}
+            <li><a class="navbar-brand" href="/">
+                Головна
+            </a></li>
             <!--Display this link only when the user is logged in-->
-            <li><a href="/views/create">Create Article</a></li>
+            <li><a href="/views/create">Додати</a></li>
+
+            {{ if not .is_logged_in }}
+            <!--Display this link only when the user is not logged in-->
+            <li><a href="/u/register">Реєстрація</a></li>
             {{end}}
             {{ if not .is_logged_in }}
             <!--Display this link only when the user is not logged in-->
-            <li><a href="/u/register">Register</a></li>
+            <li><a href="/u/login">Вхід</a></li>
             {{end}}
-            {{ if not .is_logged_in }}
-            <!--Display this link only when the user is not logged in-->
-            <li><a href="/u/login">Login</a></li>
-            {{end}}
+
+            <!--Display this link only when the user is logged in-->
+            <li><a href="/ratings">Якість ЦОВВ</a></li>
+
             {{ if .is_logged_in }}
             <!--Display this link only when the user is logged in-->
-            <li><a href="/u/logout">Logout</a></li>
+            <li><a href="/u/logout">Вихід</a></li>
             {{end}}
         </ul>
     </div>
