--- a/templates/header.html
+++ b/templates/header.html
@@ -35,7 +35,7 @@
     <base href="/">
 </head>
 
-<body class="container" ng-app="viewDB" ng-controller="viewDBCtrl">
+<body class="container" ng-app="viewDB">
 <!--Embed the menu.html template at this location-->
 
 
