--- a/templates/header.html
+++ b/templates/header.html
@@ -17,7 +17,8 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 
-    <script src="/static/js/angular-bootstrap-toggle.min.js"></script>
+    <script src="https://cdn.rawgit.com/indrimuska/angular-switcher/master/dist/angular-switcher.min.js"></script>
+
     <script src="/static/js/ui-bootstrap-tpls-2.5.0.min.js"></script>
     <script src='/static/js/controller.js'></script>
     <script src="/static/js/inline-edit.js"></script>
@@ -29,7 +30,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href='/static/css/style.css'>
-    <link rel="stylesheet" href='/static/css/angular-bootstrap-toggle.min.css'>
+    <link href="https://cdn.rawgit.com/indrimuska/angular-switcher/master/dist/angular-switcher.min.css" rel="stylesheet">
 
 
     <base href="/">
