--- a/templates/menu.html
+++ b/templates/menu.html
@@ -7,7 +7,7 @@
                 Головна
             </a></li>
             <!--Display this link only when the user is logged in-->
-            <li><a href="/views/create">Додати</a></li>
+            <li><a href="/track/create">Додати</a></li>
 
             {{ if not .is_logged_in }}
             <!--Display this link only when the user is not logged in-->
