--- a/templates/header.html
+++ b/templates/header.html
@@ -15,22 +15,26 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-animate.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/indrimuska/angular-switcher/master/dist/angular-switcher.min.js"></script>
 
     <script src="/static/js/ui-bootstrap-tpls-2.5.0.min.js"></script>
+    <script src="/static/js/angular-bootstrap-lightbox.min.js"></script>
     <script src='/static/js/controller.js'></script>
-    <script src="/static/js/inline-edit.js"></script>
-    <script src="/static/js/inline-typehead.js"></script>
-    <script src="/static/js/inline-comment.js"></script>
-    <script src="/static/js/inline-date.js"></script>
-    <script src="/static/js/on-enter.js"></script>
-    <script src="/static/js/on-esc.js"></script>
+    <script src="/static/js/comp/inline-edit.js"></script>
+    <script src="/static/js/comp/inline-typehead.js"></script>
+    <script src="/static/js/comp/inline-comment.js"></script>
+    <script src="/static/js/comp/inline-date.js"></script>
+    <script src="/static/js/comp/on-enter.js"></script>
+    <script src="/static/js/comp/on-esc.js"></script>
+    <script src="/static/js/comp/file-upload.js"></script>
+    <script src="/static/js/services/file-service.js"></script>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link rel="stylesheet" href='/static/css/style.css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" crossorigin="anonymous">
     <link href="https://cdn.rawgit.com/indrimuska/angular-switcher/master/dist/angular-switcher.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href='/static/css/style.css'>
+    <link rel="stylesheet" href="/static/css/angular-bootstrap-lightbox.min.css">
 
 
     <base href="/">
