--- a/templates/header.html
+++ b/templates/header.html
@@ -22,6 +22,7 @@
     <script src="/static/js/src/angular-bootstrap-lightbox.min.js"></script>
 
     <script src='/static/js/controller.js'></script>
+    <script src='/static/js/filters.js'></script>
     <script src='/static/js/config.js'></script>
     <script src='/static/js/services.js'></script>
     <script src="/static/js/comp/inline-edit.js"></script>
