--- a/templates/header.html
+++ b/templates/header.html
@@ -11,12 +11,12 @@
 
     <!--Use bootstrap to make the application look decent-->
 
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-route.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-animate.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-sanitize.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="https://cdn.rawgit.com/indrimuska/angular-switcher/master/dist/angular-switcher.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+    <script src="/static/js/src/angular-route.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-animate.js"></script>
+    <script src="/static/js/src/angular-sanitize.js"></script>
+    <script src="/static/js/src/jquery.min.js"></script>
+    <script src="/static/js/src/angular-switcher.min.js"></script>
 
     <script src="/static/js/src/ui-bootstrap-tpls-2.5.0.min.js"></script>
     <script src="/static/js/src/angular-bootstrap-lightbox.min.js"></script>
@@ -32,10 +32,9 @@
     <script src="/static/js/comp/on-enter.js"></script>
     <script src="/static/js/comp/on-esc.js"></script>
     <script src="/static/js/comp/file-upload.js"></script>
-    <script src="/static/js/services/file-service.js"></script>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" crossorigin="anonymous">
-    <link href="https://cdn.rawgit.com/indrimuska/angular-switcher/master/dist/angular-switcher.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/angular-switcher.min.css">
 
     <link rel="stylesheet" href='/static/css/style.css'>
     <link rel="stylesheet" href="/static/css/angular-bootstrap-lightbox.min.css">
